# Shutdown_timer

./: CMakeLists.txt  LICENSE.txt  README.md  app.manifest  resources.qrc  resources.rc
i18n/: app_ar.ts  app_de.ts  app_en.ts  app_es.ts  app_fr.ts  app_ja.ts  app_ko.ts  app_pt_BR.ts  app_zh_CN.ts
src/: LanguageManager.cpp  LanguageManager.h  MainWindow.cpp  MainWindow.h  RegistryManager.cpp  RegistryManager.h  ShutdownManager.cpp  ShutdownManager.h  TaskScheduler.cpp  TaskScheduler.h  TimerEngine.cpp  TimerEngine.h  main.cpp
